@@ -46,6 +46,8 @@ namespace QuantLib {
                 || (d == 29 && m == April && y == 2011)
                 // September 19th, 2022 only (The Queen's Funeral Bank Holiday)
                 || (d == 19 && m == September && y == 2022)
+                // May 8th, 2023 (King Charles III Coronation Bank Holiday)
+                || (d == 8 && m == May && y == 2023)
                 ;
         }
 
